prof360/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: professional-app
  namespace: xlc-portfolio-dia-dev
  labels:
    app: professional-app
    env: dev
spec:
  selector:
    app: professional-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
