prof360/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: professional-app
  namespace: xlc-portfolio-dia-dev
  labels:
    app: professional-app
    env: dev
spec:
  to:
    kind: Service
    name: professional-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
